--- a/profile/index.html
+++ b/profile/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
 
+    <div id="sidebar">
+      <ul></ul>
+        <li>
+          <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
+        </li>
+        <li>
+          <a href="https://apple.com/" target="_blank"><i class="fab fa-apple"></i></a>
+        </li>
+    </div>
+    <div id="page-content">
     <div class="container">
       <div class="card">
         <img src="images/abel.jpg" id="avatar" alt="">
@@ -25,11 +35,11 @@
       <div class="card" id="card-nav">
         <ul class="list-inline">
           <li>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x"></i>Facebook</a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook fa-2x"></i> Facebook</a>
             </a>
           </li>
           <li>
-          <a href="https://www.linkedin.com/in/abel-locati-3912056b" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i>Linkedin</a>
+          <a href="https://www.linkedin.com/in/abel-locati-3912056b" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i> Linkedin</a>
           </li>
         </ul>
       </div>
@@ -61,6 +71,7 @@
   </table>
       </div>
 
+    </div>
     </div>
     </body>
 
