my profile page

--- a/profile/index.html
+++ b/profile/index.html
@@ -21,7 +21,7 @@
     <div id="page-content">
     <div class="container">
       <div class="card">
-        <img src="images/abel.jpg" id="avatar" alt="">
+        <img src="images/3177_522094234650_3845740_n.jpg" id="avatar" alt="">
         <h1>Abel Locati</h1>
         <h2>Student at Le Wagon</h2>
         <p>I am a computational chemist currently lost in code. Doing Le Wagon and enjoying it!</p>
